[package]
name = "rustfm-scraper"
version = "1.0.3" #:version
authors = [ "Nathaniel Ledford <nate@nateledford.com>" ]
description = "Scrapes listening history from Last.fm and stores it in a file"
repository = "https://github.com/nledford/rustfm-scraper"
keywords = [ "lastfm", "last-fm", "api" ]
license = "MIT"
categories = [ "api-bindings", "multimedia" ]
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
assert_cmd = "2.0.2"
async-recursion = "0.3.2"
chrono = { version = "0.4.19", features = [ "serde" ] }
clap = { version = "3.0.0-beta.5" }
crossbeam = "0.8.1"
csv = "1.1.6"
dirs = "4.0.0"
futures = "0.3.17"
indicatif = "0.16.2"
libmath = "0.2.1"
num-format = { version = "0.4.0", features = [ "with-system-locale" ] }
reqwest = { version = "0.11.6", features = [ "json" ] }
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.68"
sqlx = { version = "0.5.9", features = [ "runtime-tokio-rustls", "chrono", "sqlite" ] }
tempfile = "3.2.0"
tokio = { version = "1.12.0", features = [ "full" ] }
