[package]
name = "rustfm-scraper"
version = "1.0.4" #:version
authors = [ "Nathaniel Ledford <nate@nateledford.com>" ]
description = "Scrapes listening history from Last.fm and stores it in a file"
repository = "https://github.com/nledford/rustfm-scraper"
keywords = [ "lastfm", "last-fm", "api" ]
license = "MIT"
categories = [ "api-bindings", "multimedia" ]
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.55"
assert_cmd = "2.0.4"
async-recursion = "1.0.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
clap = { version = "3.1.5", features = [ "derive" ] }
crossbeam = "0.8.1"
csv = "1.1.6"
dirs = "4.0.0"
futures = "0.3.21"
indicatif = "0.16.2"
libmath = "0.2.1"
num-format = { version = "0.4.0", features = [ "with-system-locale" ] }
reqwest = { version = "0.11.9", features = [ "json" ] }
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = [ "runtime-tokio-rustls", "chrono", "sqlite" ] }
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = [ "full" ] }
